test/fail/type_error/not_a_function.amla
func q(x: i32) {
	y: i32 = x;
	y(34, "foo");
}
